# Parallel-MCCFR-for-Multiplayer-NLH

./: .gitattributes  .gitignore  EE_451_S_2026_Discussion_8.pptx  PROPOSAL.md  README.md  slumbot_eval.py
poker_cuda/: CMakeLists.txt  build.bat  download_handranks.ps1
poker_cuda/scripts/: build_carc.sh  carc_build_test.sh  carc_train.sh  carc_train_4p.sh  gen_handranks.py
poker_cuda/src/: abstraction.cpp  abstraction.h  bot.cpp  bot.h  card.h  cfr_gpu.cu  cfr_gpu.cuh  eval.cpp  eval.h  eval_tables.h  hand_eval.cpp  hand_eval.h  main.cpp  poker_eval.h  strategy.cpp  strategy.h  test_main.cpp
poker_cuda/tools/: gen_lookup_table.cpp
